@@ -343,7 +343,6 @@ end
 #         "due_on": "2013-11-29",
 #         "assignee_emails": ["bobama@example.com", "gwbush@example.com", "bclinton@example.com"],
 #         "field_values": {"field1": "value1", "field2": "value2"},
-#         "metadata": {"customer_id": "7676767", "loan_id": "1234-7890"}
 #       }
 #     }
 #
@@ -354,7 +353,6 @@ end
 #     * `due_on`: **Required**.  ISO8601 date of when the DistributedToDo is due, in your configured Time Zone.
 #     * `assignee_emails`: **Required**.  An Array of email addresses of Users that will receive the DistributedToDos.
 #     * `field_values`: Dictionary (Object) of values to pre-fill in the DistributedToDo.  Field names are available in Continuity Control under "Settings".
-#     * `metadata`: Dictionary (Object) of additional key-value pairs. Values must be strings. Metadata can be used to hold any extra related data, and can be used in querying.  The key and value combined are limited to 247 characters.
 #
 # ### Example responses
 #
@@ -431,10 +429,6 @@ end
 #       "completed_at": null,
 #       "due_on": "2013-11-08",
 #       "tags": ["security", "annual", "training"],
-#       "metadata": {
-#         "customer_id": "7676767",
-#         "loan_id": "1234-7890"
-#       },
 #       "assignments": [
 #         {
 #           "email": "bobama@example.com",
@@ -465,7 +459,6 @@ end
 #   * `completed_at`: ISO8601 datetime of when the DistributedToDo was completed, in UTC.  This is when all the assignments have been finished.  May be `null`.
 #   * `due_on`: ISO8601 date of when the DistributedToDo is due, in your configured Time Zone.
 #   * `tags`: The tags for this DistributedToDo, as an array of strings. If there are no tags, it will be an empty array.
-#   * `metadata`: The metadata for this DistributedToDo, as an object. If there are no metadata, it will be an empty object. Values will always be returned as strings.
 #   * `assignments`: Array
 #     * `email`: User email of DistributedToDo assignment
 #     * `completed_on`: ISO8601 date on which the assignment was completed (in UTC), or `null` if not completed
@@ -497,8 +490,6 @@ end
 #     GET /v1/distributed_to_dos?complete=true
 #     GET /v1/distributed_to_dos?created_after=2013-11-02&created_before=2013-11-07&late=true&complete=false
 #     GET /v1/distributed_to_dos?tags[]=annual&tags[]=security
-#     GET /v1/distributed_to_dos?metadata[customer_id]=7676767
-#     GET /v1/distributed_to_dos?metadata[customer_id]=7676767&metadata[loan_id]=1234-7890
 #
 # ### Request fields
 #
@@ -507,7 +498,6 @@ end
 #   * `late`: When `true`, respond with only "late" DistributedToDos.  When `false`, respond with only "on time" DistributedToDos.  When not present, do not filter on lateness.
 #   * `complete`: When `true`, respond with only "complete" DistributedToDos.  When `false`, respond with only "incomplete" DistributedToDos.  When not present, do not filter on completeness.
 #   * `tags`: Only return DistributedToDos that are tagged with all of the specified tags.
-#   * `metadata`: Only return DistributedToDos that have all the specified metadata.
 #
 # `late` and `complete` can be combined to filter:
 #
