@@ -51,22 +51,3 @@
     <li><%= tag %></li>
   <% end %>
 </ul>
-
-<h3>Metadata</h3>
-
-<table>
-  <thead>
-    <tr>
-      <th>Key</th>
-      <th>Value</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% metadata.each do |key, value| %>
-      <tr>
-        <td><%= key %></td>
-        <td><%= value %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
