@@ -31,17 +31,6 @@
   (A complete implementation would allow arbitrary field values)
   <br />
 
-  <label for="metadata_key1">Content for metadata key1</label>
-  <input name="distributed_to_do[metadata][key1]" id="metadata_key1" type="text" />
-  <br />
-
-  <label for="metadata_key2">Content for metadata key2</label>
-  <input name="distributed_to_do[metadata][key2]" id="metadata_key2" type="text" />
-  <br />
-
-  (A complete implementation would allow arbitrary metadata values)
-  <br />
-
 
   <input type="submit" value="Submit" />
 </form>
